force-app/main/default/objects/animalos__Service_Price__c/animalos__Service_Price__c.object-meta.xml
<CustomObject>
    <label>Service Price</label>
    <nameField>
        <displayFormat>SP{00000}</displayFormat>
        <label>Service Price ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Prices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>