force-app/main/default/objects/animalos__Service_Price__c/fields/animalos__Cost__c.field-meta.xml
<CustomField>
    <fullName>animalos__Cost__c</fullName>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>