force-app/main/default/objects/animalos__Service_Price__c/fields/animalos__Service__c.field-meta.xml
<CustomField>
    <fullName>animalos__Service__c</fullName>
    <label>Service</label>
    <referenceTo>animalos__Service__c</referenceTo>
    <relationshipLabel>Service Prices</relationshipLabel>
    <relationshipName>Service_Prices</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>