force-app/main/default/objects/animalos__Service_Price__c/fields/animalos__Service_List__c.field-meta.xml
<CustomField>
    <fullName>animalos__Service_List__c</fullName>
    <label>Service List</label>
    <referenceTo>animalos__Service_List__c</referenceTo>
    <relationshipLabel>Service Prices</relationshipLabel>
    <relationshipName>Service_Prices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>