force-app/main/default/objects/animalos__Service_Price__c/fields/animalos__Service_Name__c.field-meta.xml
<CustomField>
    <fullName>animalos__Service_Name__c</fullName>
    <formula>animalos__Service__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Name</label>
    <type>Text</type>
</CustomField>